Добавлена авторизация в ВК, пока что вся инфа об аккаунте находится в коде (так низя), добавлен парсинг картинок со страницы моего друга

--- a/TestTelegramBot/TestTelegramBot.csproj
+++ b/TestTelegramBot/TestTelegramBot.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ParseVkMemes\ParseVkMemes.csproj" />
     <ProjectReference Include="..\TelegramBot\TelegramBot.csproj" />
   </ItemGroup>
 
