--- a/TelegramBot/TelegramBot.csproj
+++ b/TelegramBot/TelegramBot.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Telegram.Bot" Version="16.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ParseVkMemes\ParseVkMemes.csproj" />
+  </ItemGroup>
+
 </Project>
