--- a/TestTelegramBot/App.config
+++ b/TestTelegramBot/App.config
@@ -3,11 +3,11 @@
   <appSettings>
     <add key="TelegramBotToken" value="1908202643:AAEObGX8meJ0xivUZKj_g20Bjbi8pfyY9ns" />
     <add key="SiteAneks" value="https://baneks.ru/random" />
-    <add key="LogFile" value="E:\Study\TelegramBot\TelegramBot\logfile.txt" />
+    <add key="LogFile" value="" />
 
-    <add key="LoginVk" value="orlovaleksey5@gmail.com" />
-    <add key="PassVk" value="1337Alex1488" />
-    <add key="UserId" value="297701190" />
-    <add key="AppId" value="7911557" />
+    <add key="LoginVk" value="" />
+    <add key="PassVk" value="" />
+    <add key="UserId" value="" />
+    <add key="AppId" value="" />
   </appSettings>
 </configuration>
