--- a/TestTelegramBot/App.config
+++ b/TestTelegramBot/App.config
@@ -5,9 +5,9 @@
     <add key="SiteAneks" value="https://baneks.ru/random" />
     <add key="LogFile" value="E:\Study\TelegramBot\TelegramBot\logfile.txt" />
 
-    <add key="LoginVk" value="orlovaleksey5@gmail.com" />
-    <add key="PassVk" value="1337Alex1488" />
-    <add key="UserId" value="297701190" />
-    <add key="AppId" value="7911557" />
+    <add key="LoginVk" value="" />
+    <add key="PassVk" value="" />
+    <add key="UserId" value="" />
+    <add key="AppId" value="" />
   </appSettings>
 </configuration>
