--- a/TestTelegramBot/App.config
+++ b/TestTelegramBot/App.config
@@ -3,11 +3,11 @@
   <appSettings>
     <add key="TelegramBotToken" value="1908202643:AAEObGX8meJ0xivUZKj_g20Bjbi8pfyY9ns" />
     <add key="SiteAneks" value="https://baneks.ru/random" />
-    <add key="LogFile" value="E:\Study\TelegramBot\TelegramBot\logfile.txt" />
+    <add key="LogFile" value="C:\Users\orlov\Documents\TelegramBot\TelegramBot\logfile.txt" />
 
-    <add key="LoginVk" value="" />
-    <add key="PassVk" value="" />
-    <add key="UserId" value="" />
-    <add key="AppId" value="" />
+    <add key="AWSAccessKeyId" value="AKIARV2P2OLA3SJBUGLE" />
+    <add key="AWSSecretKey" value="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" />
+
+    <add key="VoiceFile" value="/TelegramBot/voice.ogg" />
   </appSettings>
 </configuration>
