реализовать обработку сообщени

--- a/TestTelegramBot/App.config
+++ b/TestTelegramBot/App.config
@@ -3,7 +3,7 @@
   <appSettings>
     <add key="TelegramBotToken" value="1908202643:AAEObGX8meJ0xivUZKj_g20Bjbi8pfyY9ns" />
     <add key="SiteAneks" value="https://baneks.ru/random" />
-    <add key="LogFile" value="C:\Users\orlov\Documents\TelegramBot\TelegramBot\logfile.txt" />
+    <add key="LogFile" value="/TelegramBot/logfile.txt" />
 
     <add key="AWSAccessKeyId" value="AKIARV2P2OLA3SJBUGLE" />
     <add key="AWSSecretKey" value="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" />
