--- a/TextScoring/TextScoring.csproj
+++ b/TextScoring/TextScoring.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.Polly" Version="3.7.3.23" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
