начать создание смены голоса

--- a/TestTelegramBot/App.config
+++ b/TestTelegramBot/App.config
@@ -9,5 +9,7 @@
     <add key="AWSSecretKey" value="cCfhiH8xFUiy3A8o0EofvIyCTUxiqKSzcNTZR5to" />
 
     <add key="VoiceFile" value="/TelegramBot/voice.ogg" />
+
+    <add key="VoiceName" value=""/>
   </appSettings>
 </configuration>
